--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,9 @@ cython_debug/
 *.mp3
 *.wav
 
+# log
+learneng_vite/node_modules
+
 # Exception for voice_samples
 !voice_samples/*.mp3
 !voice_samples/*.wav
