--- a/learneng_vite/package.json
+++ b/learneng_vite/package.json
@@ -9,17 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "9.75.0",
-    "@react-three/fiber": "8.13.3",
+    "@react-three/drei": "^9.75.0",
+    "@react-three/fiber": "^8.13.3",
     "@react-three/xr": "^5.7.1",
     "@types/three": "0.152.1",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "leva": "^0.9.35",
     "multer": "^1.4.5-lts.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "three": "0.153.0"
   },
   "devDependencies": {
